--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.35",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -10,7 +12,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-pure-loaders": "^3.0.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "weaviate-client": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
