--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-pure-loaders": "^3.0.1",
     "react-scripts": "3.4.3",
     "weaviate-client": "^1.1.2"
